[gd_scene load_steps=2 format=3 uid="uid://b5uwe12iu46r3"]

[ext_resource type="Script" path="res://HitBoxHurtBox/hurt_box.gd" id="1_8qehh"]

[node name="HurtBox" type="Area2D"]
script = ExtResource("1_8qehh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invincibility_ended" from="." to="." method="_on_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
